# otherSide

./: .clang-format  .clang-tidy  .gitmodules  CMakeLists.txt  README.md
src/: Client.h  Logger.h  MessageTypes.h  Server.h  Signaler.h  main.cpp  utils.h  working_main.cpp
src/app/: App.cpp  App.h  AppEvent.h  AppScreen.h  AppState.h  CMakeLists.txt
src/core/: Logger.h
src/device/: Device.cpp  Device.h
src/logger/: Logger.h
src/media/: CMakeLists.txt  FFmpegH264Encoder.cpp  FFmpegH264Encoder.h  FakeVideoSource.cpp  FakeVideoSource.h  Frame.h  FrameFeed.h  IVideoDecoder.h  IVideoEncoder.h  IVideoSource.h  VideoDecoder.cpp  VideoDecoder.h  VideoEncoder.h  VideoSender.h
src/media/H264/: H264Decoder.cpp  H264Decoder.h  H264Encoder.cpp  H264Encoder.h
src/media/include/: VideoSender.h  VideoSource.h
src/message/: CMakeLists.txt  DCMessageManager.cpp  DCMessageManager.h  DCMessageType.h  NetMessage.cpp  NetMessage.h  NetMessageFeed.h
src/network/: Connection.cpp  Connection.h  Signaler.cpp  Signaler.h  SignalerClient.h  SignalerMessageType.h  SignalerServer.h
src/session/: CMakeLists.txt  ClientConnection.h  ClientSession.cpp  ClientSession.h  HostSession.cpp  HostSession.h  ISession.h  SessionThreaded.h  TrackSetup.h
src/ui/: BaseUI.h  CMakeLists.txt  ScreenRouter.h
src/ui/panel/: IPanel.h  MessagePanel.cpp  MessagePanel.h  VideoPanel.cpp  VideoPanel.h
src/ui/screen/: ClientScreen.h  HostScreen.h  IScreen.h  IdleScreen.h  RoleSelectionScreen.h
src/video/: FakeVideoSource.h  IVideoSource.h  VideoProcessor.h
